plugins {
    id 'java'
    id 'war'
}

group 'team2.pjt12'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    springVersion = '5.3.37'
    springSecurityVersion='5.8.13'
    lombokVersion = '1.18.30'
    mybatisVersion = '3.5.15'
    mybatisSpringVersion = '2.1.1'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {

    // Spring Core / MVC
    implementation "org.springframework:spring-context:${springVersion}"
    implementation "org.springframework:spring-webmvc:${springVersion}"

    // MyBatis
    implementation "org.mybatis:mybatis:${mybatisVersion}"
    implementation "org.mybatis:mybatis-spring:${mybatisSpringVersion}"

    // Lombok (선택사항)
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // SLF4J + Log4j2 연동
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'

    // JSTL & Servlet API
    implementation 'javax.servlet:jstl:1.2'
    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'

    // MySQL Driver (또는 사용하는 DB)
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    implementation 'com.zaxxer:HikariCP:2.7.4'

    implementation "org.springframework:spring-tx:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    // JUnit (테스트 용도)
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.springframework:spring-test:${springVersion}"

    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'

    // JSON 변환용
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'

    // swagger
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    // security
    implementation "org.springframework.security:spring-security-web:${springSecurityVersion}"
    implementation "org.springframework.security:spring-security-config:${springSecurityVersion}"

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'javax.annotation:javax.annotation-api:1.3.2'

    // validation
    implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.glassfish:javax.el:3.0.0' // EL 표현식 지원

    // Redis
    implementation 'org.springframework.data:spring-data-redis:2.7.18'
    implementation 'io.lettuce:lettuce-core:6.2.3.RELEASE'

    // email
    implementation "org.springframework:spring-context-support:5.3.37"
    implementation "com.sun.mail:jakarta.mail:1.6.7"

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3'

    //암호화
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70' 
}

test {
    useJUnitPlatform()
}